--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dice Machine</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets\style.css">
   </head>
-  <body>
-    <main>
-        <form>
+  <body  class="flex-container">
+    <main class="row">
+        <form class="col">
             <h1>How Many?</h1>
             <input id="multiple" type="number" size="4"  min="1" max="1000" value="1">
         </form>
-        <div>
+        <div class="col">
             <form class="dice">
                 <h1>d4</h1>
                 <input id="4" type="button" value="Roll">
@@ -43,6 +44,7 @@
                 <input id="100" type="button" value="Roll">
             </form>
         </div> 
+        <h1 id="results" class="col"></h1>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="assets\script.js"></script>
